<resources>
    <string name="app_name">Mystride</string>
    <string name="volkjumps17">volkjumps_17</string>
    <string name="_21_rides_this_month">21 Rides this month</string>
    <string name="make_it_rain_carrots">Make It Rain Carrots</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="continue_label">continue</string>
    <string name="name">Name</string>
    <string name="your_phone">Your Phone</string>
    <string name="phone_mask">(- - -) - - - - - - -</string>
    <string name="please_enter_your_mobile_phone_number">Please enter your mobile phone number.</string>
    <string name="select_country">Select country</string>
    <string name="first_name_required">Please enter your first name</string>
    <string name="we_don_t_currently_support_that_country">We don’t currently support that country</string>
    <string name="please_enter_entire_number">Please enter your entire mobile number</string>
    <string name="please_enter_your_last_name">Please enter your last name</string>
    <string name="waitng_for_network">Waitng for network…</string>
    <string name="signup_success_title">Welcome Back!</string>
    <string name="signup_success_message">Welcome back to mystride</string>
    <string name="please_enter_your_sms_code">Please enter your SMS Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="resend_success_message">SMS code Resented</string>
    <string name="sms_code_short">Please make sure your code is six digits</string>
    <string name="whoa">Whoa!</string>
    <string name="invalid_code_message">Please double-check the code and enter it again.</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="code_request_limit_message">You have requested to many new codes. Please try again in a few hours.</string>
    <string name="too_many_wrong_codes">The wrong code was entered too many times. Please try again in a few hours.</string>
    <string name="good_news">Good news!</string>
    <string name="whould_you_like_to_login">You already have a mystride account. Would you like to login?</string>
    <string name="yes">yes</string>
    <string name="no_thanks">No thanks</string>
    <string name="break_time">Break Time!</string>
    <string name="send_code">Send Code</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="login">Log in</string>
    <string name="handle">Handle</string>
    <string name="handle_is_your_unique_5_to_20_character_identiy">Handle is your unique 5 to 20 character identiy</string>
    <string name="handle_already_taken_message">Ugh!  Someone just beat you to that Handle. Please choose a differnet one.</string>
    <string name="handle_request_limit_message">You have tried too much please try in a few hours</string>
    <string name="handle_short">Your Handle must be 5 to 20 charachters long</string>
    <string name="handle_taken_error">The Handle ‘DaveRider’ is not available</string>
</resources>
