<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mystride.presentation.views.confirm.ConfirmSignUpActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:animateLayoutChanges="true">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <TextView
                android:id="@+id/tv_no_internet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:drawablePadding="@dimen/generic_padding"
                android:drawableStart="@drawable/ic_signal_wifi_off_black_24dp"
                android:gravity="start|center"
                android:paddingEnd="@dimen/activity_margin"
                android:paddingStart="@dimen/activity_margin"
                android:text="@string/waitng_for_network"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_size_20_sp"
                android:visibility="gone" />

        </FrameLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/sms_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_margin_2"
        android:layout_marginStart="@dimen/activity_margin_2"
        android:layout_marginTop="@dimen/activity_margin_3"
        android:textColorHint="@color/secondaryText"
        app:hintTextAppearance="@style/editTextHintAppearance"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

        <EditText
            android:id="@+id/sms_code_edit"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_enter_your_sms_code"
            android:inputType="number"
            android:maxLength="6"
            android:textSize="@dimen/font_size_18_sp" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_continue"
        style="@style/brandButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_2"
        android:text="@string/continue_label"
        app:layout_constraintEnd_toEndOf="@id/sms_code_layout"
        app:layout_constraintStart_toStartOf="@id/sms_code_layout"
        app:layout_constraintTop_toBottomOf="@id/sms_code_layout" />


    <Button
        android:id="@+id/btn_resend"
        style="@style/outlineBrandAccentButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_2"
        android:text="@string/resend_code"
        app:layout_constraintEnd_toEndOf="@id/sms_code_layout"
        app:layout_constraintStart_toStartOf="@id/sms_code_layout"
        app:layout_constraintTop_toBottomOf="@id/btn_continue" />

    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btn_resend,btn_continue" />


    <ProgressBar
        android:id="@+id/loading_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_resend" />


</android.support.constraint.ConstraintLayout>
