<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mystride.presentation.views.signup.SignUpFirstLastNameActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/first_name_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin_3"
        android:textColorHint="@color/secondaryText"
        app:hintEnabled="false"
        app:hintTextAppearance="@style/editTextHintAppearance"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout">

        <EditText
            android:id="@+id/first_name_edit"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/last_name_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:textColorHint="@color/secondaryText"
        app:hintEnabled="false"
        app:hintTextAppearance="@style/editTextHintAppearance"
        app:layout_constraintTop_toBottomOf="@id/first_name_layout">

        <EditText
            android:id="@+id/last_name_edit"
            style="@style/editTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_continue"
        style="@style/brandButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_2"
        android:text="@string/continue_label"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/last_name_layout"
        app:layout_constraintStart_toStartOf="@id/last_name_layout"
        app:layout_constraintTop_toBottomOf="@id/last_name_layout" />

</android.support.constraint.ConstraintLayout>