<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.views.phone.SignUpPhoneActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <EditText
        android:id="@+id/country_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="@dimen/activity_margin_2"
        android:layout_marginStart="@dimen/activity_margin_2"
        android:layout_marginTop="@dimen/activity_margin_3"
        android:cursorVisible="false"
        android:enabled="true"
        android:focusableInTouchMode="false"
        android:gravity="top"
        android:longClickable="false"
        android:paddingStart="@dimen/activity_margin"
        android:text="United States"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/font_size_18_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/country_code_layout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginEnd="@dimen/generic_padding"
        android:layout_marginStart="@dimen/activity_margin_2"
        android:layout_marginTop="@dimen/activity_margin"
        android:textColorHint="@color/secondaryText"
        app:hintEnabled="false"
        app:hintTextAppearance="@style/editTextHintAppearance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_name">

        <EditText
            android:id="@+id/country_code"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:longClickable="false"
            android:text="+1"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/font_size_18_sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phone_number_layout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginEnd="@dimen/activity_margin_2"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:textColorHint="@color/secondaryText"
        app:hintEnabled="false"
        app:hintTextAppearance="@style/editTextHintAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/country_code_layout"
        app:layout_constraintTop_toBottomOf="@id/country_name">

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_mask"
            android:inputType="phone"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/secondaryText"
            android:textSize="@dimen/font_size_18_sp" />

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/please_enter_your_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin_2"
        android:text="@string/please_enter_your_mobile_phone_number"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/font_size_15_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_number_layout" />


    <Button
        android:id="@+id/btn_continue"
        style="@style/brandButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_2"
        android:text="@string/continue_label"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/phone_number_layout"
        app:layout_constraintStart_toStartOf="@id/country_code_layout"
        app:layout_constraintTop_toBottomOf="@id/please_enter_your_mobile" />

</android.support.constraint.ConstraintLayout>